k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-jarvis-web
  namespace: jarvis
spec:
  type: ClusterIP
  selector:
    app: url-jarvis-web
  ports:
    - port: 3000
      targetPort: 3000
